# Plonk-Prototype

./: .gitignore  Cargo.toml  README.md  correct_mds_generation.sage  generate_parameters_grain_deterministic.sage  poseidonperm_bls381_width3.sage
src/: lib.rs  main.rs  sbox.rs  zk.rs
src/benches/: poseidon_opt_native.rs  poseidon_opt_plonk.rs  poseidon_opt_r1cs.rs
src/bin_unused/: bowe_hopw_one_chunk.rs  pedersen_hash_one_window.rs
src/merkle_tree/: mod.rs  poseidon.rs
src/poseidon/: constants.rs  field.rs  lfsr.rs  matrix.rs  mds.rs  mod.rs  poseidon.rs  poseidon_ref.rs  preprocessing.rs  round_constant.rs  round_numbers.rs
src/poseidon/constraints/: mod.rs  poseidon_ref.rs
src/sbox/: sbox.rs
src/tests/: conversion.rs  mod.rs  neptune_hyper_parameter.rs
src/zk/: allocated_scalar.rs  circuits.rs  gadgets.rs  pedersen.rs
src/zk/bowe_hopwood/: mod.rs
www/: index.js
