[package]
name = "plonk_prototype"
version = "0.1.0"
authors = []
edition = "2018"
readme = "README.md"
repository = "https://github.com/Manta-Network/Plonk-Prototype"
keywords = ["cryptography", "circuits", "zk-snarks", "zero-knowledge", "crypto"]
categories =["algorithms", "cryptography", "science"]
description = "An implementation of various circuits within Manta Network"
license = "MPL-2.0"
exclude = [
    ".gitignore",
    "Cargo.lock",
    ".github/"
]

[dependencies]
rand_core = "0.6.0"
rand = "0.8"

ark-plonk = {git = "https://github.com/rust-zkp/plonk"}
ark-ec = { version = "0.3", features = ["std"] }
ark-ff = { version = "0.3", features = ["std"] }
ark-serialize = { version = "0.3", features = ["derive"] }
ark-poly = "0.3"
ark-poly-commit = "0.3"
itertools = {version = "0.10.1", default-features = false}
num-traits = "0.2.14"
derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
hashbrown = { version = "0.11.2", default-features = false, features = ["ahash"] }
merlin = { version = "3.0", default-features = false }


[dev-dependencies]
ark-bls12-381 = "0.3"
ark-bls12-377 = "0.3"
ark-ed-on-bls12-381 = "0.3"
ark-ed-on-bls12-377 = "0.3"


# [patch."https://github.com/rust-zkp/ark-plonk"]
# ark-plonk = {git = "https://github.com/rust-zkp/ark-plonk"} 

[features]
std = [] 