[package]
name = "plonk_protoype"
version = "0.1.0"
authors = []
edition = "2018"
readme = "README.md"
repository = "https://github.com/Manta-Network/Plonk-Prototype"
keywords = ["cryptography", "circuits", "zk-snarks", "zero-knowledge", "crypto"]
categories = ["algorithms", "cryptography", "science"]
description = "An implementation of various circuits within Manta Network"
license = "MPL-2.0"
exclude = [
    ".gitignore",
    "Cargo.lock",
    ".github/"
]

[dependencies]
rand_core = "0.6.0"
rand = "0.8"
thiserror = "1.0.30"

plonk-core = { git = "https://github.com/zk-garage/plonk", features = ["trace"] }
# arkworks-plonk-circuits = {git = "https://github.com/webb-tools/arkworks-gadgets"}
# arkworks-utils = {git = "https://github.com/webb-tools/arkworks-gadgets"}
# arkworks-gadgets = {git = "https://github.com/webb-tools/arkworks-gadgets"}
ark-ec = { version = "0.3", features = ["std"] }
ark-ff = { version = "0.3", features = ["std"] }
ark-serialize = { version = "0.3", features = ["derive"] }
ark-poly = "0.3"
ark-poly-commit = "0.3"
ark-crypto-primitives = { version = "^0.3.0", features = ["r1cs"], default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
itertools = { version = "0.10.1", default-features = false }
num-traits = "0.2.14"
derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
hashbrown = { version = "0.11.2", default-features = false, features = ["ahash"] }
ark-relations = "0.3.0"
ark-r1cs-std = "0.3.1"
# merlin = { version = "3.0", default-features = false }

# curves
ark-ed-on-bn254 = { version = "^0.3.0", default-features = false, features = ["r1cs"] }
ark-bn254 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-ed-on-bls12-381 = { version = "^0.3.0", default-features = false, features = ["r1cs"] }


[dev-dependencies]
rand = "0.8"
ff = "0.11.0"
blstrs = "0.4.0"
generic-array = "0.14.4"
neptune = { git = "https://github.com/filecoin-project/neptune" }
criterion = "0.3"

[features]
no-optimize = []

[profile.test]
opt-level = 3

[[bench]]
name = "poseidon_opt_native"
path = "src/benches/poseidon_opt_native.rs"
harness = false

[[bench]]
name = "poseidon_opt_plonk"
path = "src/benches/poseidon_opt_plonk.rs"
harness = false